# mems_mic_2

./: CMakeLists.txt  pico_sdk_import.cmake
examples/usb_microphone/: main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h  usb_microphone.c  usb_microphone.h
src/: analog_microphone.c
src/include/pico/: analog_microphone.h
